styles.css
html {
    font-size: 62.5%;
    font-family: 'DM Sans', sans-serif;
    font-family: 'Inter', sans-serif;
}

* {
    box-sizing: border-box;
    margin: 0rem;
    padding: 0rem;
}

:root {
    /* Colors*/
    --c-primary:#f7931a;
    --c-primary-soft: #FFE9D4;
    --c-secondary: #1A9AF7;
    --c-secondary-soft: #E7F5FF;
    --c-warm-dark:#201E1C;
    --c-dark: #282623;
    --c-grey: #bababa;
    --c-off-white: #faf8f7;
    --c-just-white: #fff;
}

header {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-width: 280px;
    height: 33.4rem;
    text-align: center;
    background: linear-gradient(232deg, var(--c-warm-dark), var(--c-primary));
    background-size: 400% 400%;
    -webkit-animation: bgAnimateBitcoin 20s ease infinite;
    -moz-animation: bgAnimateBitcoin 20s ease infinite;
    animation: bgAnimateBitcoin 20s ease infinite;
}

@-webkit-keyframes bgAnimateBitcoin {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@-moz-keyframes bgAnimateBitcoin {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@keyframes bgAnimateBitcoin {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}

.header__image-container {
    width: 15rem;
    height: 2.4rem;
    margin-top: 6rem;
}

.header__title-container {
    width: 90%;
    min-width: 23rem;
    max-width: 90rem;
    height: 21.8rem;
    margin-top: 4rem;
}

.header__title-container h1{
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 2.6rem;
    color: var(--c-just-white);
}

.header__title-container p{
    margin-top: 2.4rem;
    font-size: 1.4rem;
    font-weight: normal;
    line-height: 1.8rem;
    color: var(--c-primary-soft);
}

